Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-131884

qdoc: Segmentation fault when generating .qhp

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • None
    • 6.9
    • Build tools: qdoc
    • 906c0bb18 (dev), 6a3df0c8a (6.8)
    • DaVinci 109

      For example, when building the documentation for qt/qtquick3d:

      Thread 1 "qdoc" received signal SIGSEGV, Segmentation fault.
      0x00000000004c6e46 in QArrayDataPointer<char16_t>::QArrayDataPointer (this=0x7fffffffd420, other=...) at /data/snapshot-qt6-dev/qt5/qtbase/src/corelib/tools/qarraydatapointer.h:38
      38              : d(other.d), ptr(other.ptr), size(other.size)
      (gdb) bt
      #0  0x00000000004c6e46 in QArrayDataPointer<char16_t>::QArrayDataPointer (this=0x7fffffffd420, other=...) at /data/snapshot-qt6-dev/qt5/qtbase/src/corelib/tools/qarraydatapointer.h:38
      #1  0x00000000004c4e4d in QString::QString (this=0x7fffffffd420, other=...) at /data/snapshot-qt6-dev/qt5/qtbase/src/corelib/text/qstring.h:1324
      #2  0x000000000064aca3 in HelpProjectWriter::writeNode (this=0x4c483d0, project=..., writer=..., node=0x0)
          at /data/snapshot-qt6-dev/qt5/qttools/src/qdoc/qdoc/src/qdoc/helpprojectwriter.cpp:492
      #3  0x000000000064cbec in HelpProjectWriter::generateProject (this=0x4c483d0, project=...) at /data/snapshot-qt6-dev/qt5/qttools/src/qdoc/qdoc/src/qdoc/helpprojectwriter.cpp:680
      #4  0x000000000064a578 in HelpProjectWriter::generate (this=0x4c483d0) at /data/snapshot-qt6-dev/qt5/qttools/src/qdoc/qdoc/src/qdoc/helpprojectwriter.cpp:450
      #5  0x000000000066d464 in HtmlGenerator::generateDocs (this=0x7fffffffe030) at /data/snapshot-qt6-dev/qt5/qttools/src/qdoc/qdoc/src/qdoc/htmlgenerator.cpp:252
      #6  0x00000000006a46df in processQdocconfFile (fileName=...) at /data/snapshot-qt6-dev/qt5/qttools/src/qdoc/qdoc/src/qdoc/main.cpp:602
      #7  0x00000000006a4b96 in clearModuleDependenciesAndProcessQdocconfFile (qdocFiles=...) at /data/snapshot-qt6-dev/qt5/qttools/src/qdoc/qdoc/src/qdoc/main.cpp:638
      #8  0x00000000006a4cf2 in dualExecutionMode () at /data/snapshot-qt6-dev/qt5/qttools/src/qdoc/qdoc/src/qdoc/main.cpp:672
      #9  0x00000000006a4e95 in main (argc=10, argv=0x7fffffffe9a8) at /data/snapshot-qt6-dev/qt5/qttools/src/qdoc/qdoc/src/qdoc/main.cpp:718
      

      This is referencing a Node null-pointer at helpprojectwriter.cpp:492.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            treinio Topi Reiniƶ
            treinio Topi Reiniƶ
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes