qdoc: HelpProjectWriter: clean up code for sub-project node handling

Remove unnecessary temporary, switch to use a ranged for-loop, and
use insert() for populating the QHash that contains the sub-project
Node pointers, in favor of operator[] that inserted default-constructed
values into the container.

Task-number: QTBUG-131884
Change-Id: Iaa5b3a9d6d9d833ae82ad7737697cae26e9c5181
Reviewed-by: Topi Reiniö <topi.reinio@qt.io>
(cherry picked from commit 906c0bb18dedb01642a6839633768e2072c46617)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>